fix alignment issue in bottomNav

--- a/src/components/BottomNav/BottomNav.sass
+++ b/src/components/BottomNav/BottomNav.sass
@@ -28,3 +28,6 @@
       height: 24px
       width: 24px
       margin: 0 auto 4px auto
+    .title
+      display: block
+      text-align: center
